<resources>
    <string name="app_name">Al Ahmdy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="mosque" translatable="false">mosque</string>
    <string name="request_location">We use Location services to accurately detect your city</string>
    <string name="locate_me">Locate me</string>
    <string name="welcome">Welcome</string>
    <string name="request_username">Enter your name to access to your account.</string>
    <string name="username">Username</string>
    <string name="done">Done</string>
    <string name="hint_username">Mohamed Ahmed</string>
    <string name="home">Home</string>
    <string name="quraan">Quran</string>
    <string name="qibla">Qibla</string>
    <string name="more">More</string>
    <string name="tasbeh">Tasbeh</string>
    <string name="duaa">Duaa</string>
    <string name="azkar">Azkar</string>
    <string name="hadith">Hadith</string>
    <string name="notification_required">Notification is required for Azan</string>
    <string name="notification_sorry">We are sorry… you should enable notification permission manually</string>
    <string name="qibla_direction">Qibla angle of your location</string>
    <string name="qibla_title">Qibla direction</string>
    <string name="last_read">Last Read</string>
    <string name="surah">Surah</string>
    <string name="page">Page</string>
    <string name="juz">Juz</string>
    <string name="hizb">Hizb</string>
    <string name="al_quraan">Al-Quran</string>
    <string name="auto_scroll">Auto Scroll</string>
    <string name="planner">Planner</string>
    <string name="play">Play audio</string>
    <string name="bookmark">Bookmark</string>
    <string name="txt_planner">Add Planner</string>
    <string name="range">Select Range</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="number_days">Number of days</string>
    <string name="notification">Notification</string>
    <string name="notification_time">Notification Time</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="Audio">Audio</string>
    <string name="qari">Qari</string>
    <string name="add_zekr">Add New Zekr</string>
    <string name="write_here">Write here</string>
    <string name="total_tasbeh">Total Tasbeh :</string>
    <string name="list_tasbeh">List of Tasbeh</string>
    <string name="zekr_required">You should add at least one Zekr</string>
</resources>