<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/on_boarding_bg"
    tools:context=".ui.onBoarding.RegisterFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/stars" />


    <ImageView
        android:id="@+id/img_mosque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_145sdp"
        android:scaleType="fitXY"
        android:src="@drawable/mosque_on_board"
        app:layout_constraintBottom_toBottomOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="locale"
        android:textDirection="locale"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/txt_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_23sdp"
            android:fontFamily="@font/inria_serif_bold"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="@dimen/_21ssp" />

        <TextView
            android:id="@+id/txt_request_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_app_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_23sdp"
            android:fontFamily="@font/inter_18_medium"
            android:gravity="center"
            android:text="@string/request_username"
            android:textColor="@color/alpha_white"
            android:textSize="@dimen/_12ssp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_request_username"
            android:layout_alignParentStart="true"
            android:id="@+id/username_layout"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_33sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:layoutDirection="locale"
            android:textDirection="locale">

            <TextView
                android:id="@+id/txtView_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="@dimen/_9ssp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtView_username"
                android:background="@drawable/username_edit_text"
                android:hint="@string/hint_username"
                android:textColor="@color/alpha_white"
                android:textColorHint="@color/alpha_white"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/_6sdp"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/dm_sans_regular"
                android:id="@+id/txt_username"
                android:padding="@dimen/_12sdp"
                android:inputType="text" />
        </RelativeLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_layout"
            android:layout_marginTop="@dimen/_38sdp"
            android:layout_marginBottom="@dimen/_31sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_43sdp"
            android:layout_marginEnd="@dimen/_43sdp"
            app:cornerRadius="@dimen/_7sdp"
            android:backgroundTint="@color/green"
            android:text="@string/done"
            android:fontFamily="@font/poppins_bold"
            android:textSize="@dimen/_12ssp"
            android:id="@+id/btn_done" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>