<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_radius_drawable"
    android:paddingStart="@dimen/_12sdp"
    android:paddingEnd="@dimen/_12sdp"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view_line"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:background="#C4C4C4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtView_planner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/txt_planner"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_line" />

            <EditText
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:background="@drawable/drawer_edit_text"
                android:fontFamily="@font/montserrat_medium"
                android:hint="Name"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtView_planner" />

            <TextView
                android:id="@+id/txt_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/range"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_name" />

            <TextView
                android:id="@+id/txt_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_21sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/from"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_range" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_spn_from"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/txt_from">

                <AutoCompleteTextView
                    android:id="@+id/spn_from"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/to"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_spn_from" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_spn_to"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/txt_to">

                <AutoCompleteTextView
                    android:id="@+id/spn_to"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtView_number_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/number_days"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_spn_to" />

            <EditText
                android:id="@+id/txt_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_42sdp"
                android:background="@drawable/drawer_edit_text"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="@id/txtView_number_day"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtView_number_day"
                app:layout_constraintTop_toTopOf="@+id/txtView_number_day" />


            <TextView
                android:id="@+id/txt_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/notification"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_number" />

            <Switch
                android:id="@+id/switch_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/txt_notification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txt_notification" />

            <TextView
                android:id="@+id/txt_notification_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/notification_time"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_notification"
                app:layout_goneMarginTop="@dimen/_12sdp" />

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="12:48 AM"
                android:textColor="#7A7474"
                app:layout_constraintBottom_toBottomOf="@+id/txt_notification_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txt_notification_time" />

            <include
                layout="@layout/buttons_layout"
                android:id="@+id/buttons_layout"
                app:layout_constraintTop_toBottomOf="@+id/txt_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>