<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quraan.SurahFragment">

    <include
        android:id="@+id/header_layout"
        layout="@layout/header_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/surah_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/img_quran"
        tools:listitem="@layout/surah_list_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_layout" />

    <GridLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btm_bar_color"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:id="@+id/auto_scroll_layout"
            android:layout_columnWeight="1"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp">

            <ImageView
                android:id="@+id/auto_scroll_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/txt_auto_scroll"
                app:layout_constraintEnd_toEndOf="@+id/txt_auto_scroll"
                android:src="@drawable/auto_scroll_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/auto_scroll_icon"
                android:text="@string/auto_scroll"
                android:textColor="@color/white"
                android:id="@+id/txt_auto_scroll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/_11ssp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:id="@+id/planner_layout"
            android:layout_columnWeight="1"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp">

            <ImageView
                android:id="@+id/planner_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/txt_planner"
                app:layout_constraintEnd_toEndOf="@+id/txt_planner"
                android:src="@drawable/planner_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/planner_icon"
                android:text="@string/planner"
                android:textColor="@color/white"
                android:id="@+id/txt_planner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/_11ssp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:id="@+id/play_layout"
            android:layout_columnWeight="1"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp">

            <ImageView
                android:id="@+id/play_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/txt_play"
                app:layout_constraintEnd_toEndOf="@+id/txt_play"
                android:src="@drawable/play_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/play_icon"
                android:text="@string/play"
                android:textColor="@color/white"
                android:id="@+id/txt_play"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/_11ssp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:id="@+id/bookmark_layout"
            android:layout_columnWeight="1"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp">

            <ImageView
                android:id="@+id/bookmark_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/txt_bookmark"
                app:layout_constraintEnd_toEndOf="@+id/txt_bookmark"
                android:src="@drawable/bookmark_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/bookmark_icon"
                android:text="@string/bookmark"
                android:textColor="@color/white"
                android:id="@+id/txt_bookmark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/_11ssp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>